salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Production__dll/fields/Defect_Count__c.field-meta.xml
<CustomField>
    <fullName>Defect_Count__c</fullName>
    <label>Defect Count</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Defect_Count</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>