salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Production__dll/fields/KQ_ProductionID__c.field-meta.xml
<CustomField>
    <fullName>KQ_ProductionID__c</fullName>
    <label>KQ_ProductionID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_ProductionID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>